Accounts query fixed